# icm

./: .env.template  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
conversations/: 259c4f06-1f51-43f1-b02b-fa45a7b628d4.jsonl  3ee1170b-4923-45f5-8586-19fc058ad54c.jsonl  73b4b8c1-82cc-43e2-b7a1-50da86f23564.jsonl  agent-62b400d8.jsonl  agent-70b7d091.jsonl  agent-7445fff3.jsonl  agent-aaea4ffc.jsonl  agent-b6396064.jsonl  agent-d94873ad.jsonl  d2165147-c8f7-41eb-b74f-a0844b9b959d.jsonl
data/: truthfulqa_test.json  truthfulqa_train.json
results/: evaluation_results.json  few_shot_golden.json  few_shot_icm.json  icm_demonstrations.json  icm_history.json  zero_shot_base.json  zero_shot_chat.json
src/: __init__.py  eval.py  figure.py  icm_search.py  main.py  utils.py
